// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/organisms/SelectSidebar default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c12 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem 0.5rem 1.875rem;
}

.c5 {
  font-size: 1rem;
  font-weight: 600;
  color: #323232;
  text-transform: camelcase;
  padding-right: 0.6rem;
  margin: 0;
  margin-top: 2rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
  color: unset;
}

.c8:hover {
  background-color: rgba(6,132,123,0.25);
  color: #06a09e;
  font-weight: 600;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
  font-weight: 600;
  color: unset;
}

.c9:hover {
  background-color: rgba(6,132,123,0.25);
  color: #06a09e;
  font-weight: 600;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
  color: #7d7d7d;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: auto;
  height: 100%;
  right: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  -webkit-animation: brnJVY 0.4s both;
  animation: brnJVY 0.4s both;
  -webkit-animation-delay: .1s;
  animation-delay: .1s;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow-y: auto;
  width: 100%;
  height: 100%;
  min-height: 100%;
  top: 0;
  z-index: 5;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  -webkit-transition-delay: 0;
  transition-delay: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  opacity: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  box-shadow: 6px 0px 30px rgba(0,0,0,0.15);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: calc(100vh - 1.875rem);
  overflow: auto;
}

.c7 {
  cursor: pointer;
}

.c10 {
  cursor: default;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
    open={true}
  >
    <div
      className="c2"
      id="lightbox-modal"
      onClick={[Function]}
      open={true}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <h4
            className="c5"
            size="md"
          >
            <span>
              PLEASE SELECT SIZE
            </span>
          </h4>
          <svg
            className="fa-cursor-pointer overlay__header__close-icon"
            color="#452FBA"
            fill="#452FBA"
            height={32}
            onClick={[Function]}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.0002 1.94995C6.4602 1.94995 1.9502 6.45995 1.9502 12C1.9502 17.54 6.4602 22.0499 12.0002 22.0499C17.5402 22.0499 22.0502 17.54 22.0502 12C22.0502 6.45995 17.5402 1.94995 12.0002 1.94995ZM15.5402 14.12C15.9302 14.51 15.9302 15.14 15.5402 15.53C15.3402 15.73 15.0902 15.82 14.8302 15.82C14.5702 15.82 14.3202 15.72 14.1202 15.53L12.0002 13.41L9.8802 15.53C9.6802 15.73 9.4302 15.82 9.1702 15.82C8.9102 15.82 8.6602 15.72 8.4602 15.53C8.0702 15.14 8.0702 14.51 8.4602 14.12L10.5902 12L8.4602 9.87995C8.0702 9.48995 8.0702 8.85995 8.4602 8.46995C8.8502 8.07995 9.4802 8.07995 9.8702 8.46995L12.0002 10.59L14.1202 8.46995C14.5102 8.07995 15.1402 8.07995 15.5302 8.46995C15.9202 8.85995 15.9202 9.48995 15.5302 9.87995L13.4102 12L15.5402 14.12Z"
            />
          </svg>
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7
            </div>
          </div>
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c9"
              disabled={false}
              onClick={[Function]}
              selected={true}
            >
              7 1/8
              <svg
                height={16}
                viewBox="0 0 32 32"
                width={16}
              >
                <path
                  d="M31.416 2.142l-19.195 29.858-11.638-12.414 2.889-2.709 8.164 8.708 16.448-25.586 3.331 2.142z"
                  fill="#00B0CA"
                />
              </svg>
            </div>
          </div>
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 1/4
            </div>
          </div>
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 3/8
            </div>
          </div>
          <div
            className="c10"
            disabled={true}
          >
            <div
              className="c11"
              disabled={true}
              onClick={[Function]}
              selected={false}
            >
              7 1/2
            </div>
          </div>
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 5/8
            </div>
          </div>
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 3/4
            </div>
          </div>
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 7/8
            </div>
          </div>
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              8
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c12"
  />
</div>
`;

exports[`Storyshots @components/organisms/SelectSidebar with footer 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c14 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c13 {
  font-size: 1rem;
  font-weight: 600;
  color: rgb(33,18,94);
  background: transparent;
  outline: none;
  border: none;
  box-shadow: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
}

.c13:hover {
  color: #513CA3;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem 0.5rem 1.875rem;
}

.c5 {
  font-size: 1rem;
  font-weight: 600;
  color: #323232;
  text-transform: camelcase;
  padding-right: 0.6rem;
  margin: 0;
  margin-top: 2rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
  color: unset;
}

.c8:hover {
  background-color: rgba(6,132,123,0.25);
  color: #06a09e;
  font-weight: 600;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
  font-weight: 600;
  color: unset;
}

.c9:hover {
  background-color: rgba(6,132,123,0.25);
  color: #06a09e;
  font-weight: 600;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
  color: #7d7d7d;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: auto;
  height: 100%;
  right: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  -webkit-animation: brnJVY 0.4s both;
  animation: brnJVY 0.4s both;
  -webkit-animation-delay: .1s;
  animation-delay: .1s;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow-y: auto;
  width: 100%;
  height: 100%;
  min-height: 100%;
  top: 0;
  z-index: 5;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  -webkit-transition-delay: 0;
  transition-delay: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  opacity: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  box-shadow: 6px 0px 30px rgba(0,0,0,0.15);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: calc(100vh - 1.875rem);
  overflow: auto;
}

.c12 {
  background-color: #f1f5f5;
  padding: 1.3rem 1.875rem 1rem 1.875rem;
}

.c7 {
  cursor: pointer;
}

.c10 {
  cursor: default;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
    open={true}
  >
    <div
      className="c2"
      id="lightbox-modal"
      onClick={[Function]}
      open={true}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <h4
            className="c5"
            size="md"
          >
            <span>
              PLEASE SELECT SIZE
            </span>
          </h4>
          <svg
            className="fa-cursor-pointer overlay__header__close-icon"
            color="#452FBA"
            fill="#452FBA"
            height={32}
            onClick={[Function]}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.0002 1.94995C6.4602 1.94995 1.9502 6.45995 1.9502 12C1.9502 17.54 6.4602 22.0499 12.0002 22.0499C17.5402 22.0499 22.0502 17.54 22.0502 12C22.0502 6.45995 17.5402 1.94995 12.0002 1.94995ZM15.5402 14.12C15.9302 14.51 15.9302 15.14 15.5402 15.53C15.3402 15.73 15.0902 15.82 14.8302 15.82C14.5702 15.82 14.3202 15.72 14.1202 15.53L12.0002 13.41L9.8802 15.53C9.6802 15.73 9.4302 15.82 9.1702 15.82C8.9102 15.82 8.6602 15.72 8.4602 15.53C8.0702 15.14 8.0702 14.51 8.4602 14.12L10.5902 12L8.4602 9.87995C8.0702 9.48995 8.0702 8.85995 8.4602 8.46995C8.8502 8.07995 9.4802 8.07995 9.8702 8.46995L12.0002 10.59L14.1202 8.46995C14.5102 8.07995 15.1402 8.07995 15.5302 8.46995C15.9202 8.85995 15.9202 9.48995 15.5302 9.87995L13.4102 12L15.5402 14.12Z"
            />
          </svg>
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7
            </div>
          </div>
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c9"
              disabled={false}
              onClick={[Function]}
              selected={true}
            >
              7 1/8
              <svg
                height={16}
                viewBox="0 0 32 32"
                width={16}
              >
                <path
                  d="M31.416 2.142l-19.195 29.858-11.638-12.414 2.889-2.709 8.164 8.708 16.448-25.586 3.331 2.142z"
                  fill="#00B0CA"
                />
              </svg>
            </div>
          </div>
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 1/4
            </div>
          </div>
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 3/8
            </div>
          </div>
          <div
            className="c10"
            disabled={true}
          >
            <div
              className="c11"
              disabled={true}
              onClick={[Function]}
              selected={false}
            >
              7 1/2
            </div>
          </div>
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 5/8
            </div>
          </div>
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 3/4
            </div>
          </div>
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 7/8
            </div>
          </div>
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              8
            </div>
          </div>
        </div>
        <div
          className="c12"
          onClick={[Function]}
        >
          <button
            className="c13"
            color="secondary"
            size="md"
          >
            SHOW SIZE TABLE
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c14"
  />
</div>
`;
